--- a/Classes/ShareKit/Core/SHKSharers.plist
+++ b/Classes/ShareKit/Core/SHKSharers.plist
@@ -14,6 +14,7 @@
 	</array>
 	<key>services</key>
 	<array>
+		<string>SHKOneNote</string>
 		<string>SHKKippt</string>
 		<string>SHKReadability</string>
 		<string>SHKEvernote</string>
